--- a/app/components/lookbook/header/component.html.erb
+++ b/app/components/lookbook/header/component.html.erb
@@ -1,6 +1,6 @@
 <%= render_component_tag :header do %>
   <%= lookbook_render :toolbar, class: "!bg-lookbook-header-bg !text-lookbook-header-text !border-lookbook-header-border" do |toolbar| %>
-    <% toolbar.section padded: true do %>
+    <% toolbar.with_section padded: true do %>
       <% if branding.present? %>
         <a
           <% if landing_path %>href="<%= landing_path %>"<% end %>    
@@ -10,7 +10,7 @@
       <% end %>
     <% end %>
 
-    <% toolbar.section padded: false, align: :right, class: "flex items-center" do %>
+    <% toolbar.with_section padded: false, align: :right, class: "flex items-center" do %>
 
       <div x-show="loading" x-cloak>
         <svg class="animate-spin h-3.5 w-3.5 text-lookbook-header-text opacity-60" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -21,23 +21,23 @@
 
       <%= lookbook_render :button_group do |group| %>
         <% if @debug_menu %>
-          <% group.button icon: :help_circle, class: "opacity-50 hover:opacity-100 transition !text-lookbook-header-text", "x-show": "!loading" do |button| %>
+          <% group.with_button icon: :help_circle, class: "opacity-50 hover:opacity-100 transition !text-lookbook-header-text", "x-show": "!loading" do |button| %>
             <% menu = lookbook_render :debug_menu,
               version: Lookbook::VERSION,
               docs_url: "https://lookbook.build/guide",
               repo_url: "https://github.com/ViewComponent/lookbook" do %>
               <%= debug_data %>
             <% end %>
-            <% button.dropdown({}).with_content(menu) %>
+            <% button.with_dropdown({}).with_content(menu) %>
           <% end %>
         <% end %>
 
-        <% group.button icon: :menu,
+        <% group.with_button icon: :menu,
           "@click.stop": "toggleSidebar",
           "x-show": "$store.layout.mobile && sidebarHidden",
           class: "!text-lookbook-header-text" %>
 
-        <% group.button icon: :x,
+        <% group.with_button icon: :x,
           "@click.stop": "toggleSidebar",
           "x-show": "$store.layout.mobile && !sidebarHidden",
           "@keydown.esc.window": "closeMobileSidebar",
