--- a/docs/src/_components/lookbook_docs/options_list/component.html.erb
+++ b/docs/src/_components/lookbook_docs/options_list/component.html.erb
@@ -4,7 +4,7 @@
       <% options.each do |option| %>
         <tr>
           <td class="w-[15%]">
-            <code class="flex">
+            <code class="flex whitespace-nowrap">
               <% if prefix %>
                 <span class="text-gray-500 opacity-60"><%= prefix %>[</span>
                 <span class="text-indigo-600">:<%= option[:name] %></span>
