--- a/docs/src/_components/lookbook_docs/toc/component.html.erb
+++ b/docs/src/_components/lookbook_docs/toc/component.html.erb
@@ -12,7 +12,7 @@
 
   <ul class="space-y-1 px-[7px] pt-3 pb-3.5">
     <% links.each do |link| %>
-      <li>
+      <li class="truncate">
         <%= link %>
       </li>
     <% end %>
