--- a/docs/src/_partials/_mobile_nav.erb
+++ b/docs/src/_partials/_mobile_nav.erb
@@ -23,7 +23,7 @@
   </div>
   <div>
     <h3 class="font-extralight text-2xl mb-4 text-indigo-600 pb-2 border-b border-gray-300">API</h3>
-    <%= render "collection_nav", collection: collections.api %>
+    <%= render "collection_nav", collection: collections.api_docs %>
   </div>
   <div>
     <h3 class="font-extralight text-2xl mb-4 text-indigo-600 pb-2 border-b border-gray-300">Elsewhere</h3>
