docs: add temporary homepage redirect

--- a/docs/src/_pages/index.erb
+++ b/docs/src/_pages/index.erb
@@ -4,6 +4,9 @@ title: Lookbook
 lookbook_embeds: true
 ---
 
+<script>window.location.replace("/guide");</script>
+
+<% if false %>
 <div class="pb-40">
   <header class="layout-slat text-center mt-14 mb-16">
     <div class="layout-slat-grid">
@@ -81,3 +84,4 @@ lookbook_embeds: true
 
   <% end %>
 </div>
+<% end %>
