refactor: pre-beta cleanup and naming improvements

--- a/app/views/lookbook/pages/show.html.erb
+++ b/app/views/lookbook/pages/show.html.erb
@@ -14,7 +14,7 @@
             size: :lg,
             icon: :chevron_left,
             tooltip: "Previous page",
-            href: lookbook_page_path(@previous_page.path),
+            href: lookbook_page_path(@previous_page.lookup_path),
             class: "pr-0.5 bg-transparent" %>
         <% else %>
           <%= lookbook_render :button,
@@ -29,7 +29,7 @@
             size: :lg,
             icon: :chevron_right,
             tooltip: "Next page",
-            href: lookbook_page_path(@next_page.path),
+            href: lookbook_page_path(@next_page.lookup_path),
             class: "pl-0.5 bg-transparent" %>
         <% else %>
           <%= lookbook_render :button,
