--- a/app/assets/lookbook/css/tooltip.css
+++ b/app/assets/lookbook/css/tooltip.css
@@ -25,26 +25,29 @@
 }
 
 .tippy-box[data-theme~="menu"] {
-  border: 1px solid theme("colors.gray.300");
-  @apply bg-white text-gray-600 shadow-lg;
+  @apply shadow-lg !max-w-none;
+
+  border: 1px solid var(--lookbook-dropdown-divider);
+  color: var(--lookbook-dropdown-text);
+  background: var(--lookbook-dropdown-bg);
 
   & > .tippy-content {
     @apply rounded p-0 overflow-hidden;
   }
 
   &[data-placement^="top"] > .tippy-arrow::before {
-    border-top-color: white;
+    border-top-color: var(--lookbook-dropdown-bg);
   }
 
   &[data-placement^="bottom"] > .tippy-arrow::before {
-    border-bottom-color: white;
+    border-bottom-color: var(--lookbook-dropdown-bg);
   }
 
   &[data-placement^="left"] > .tippy-arrow::before {
-    border-left-color: white;
+    border-left-color: var(--lookbook-dropdown-bg);
   }
 
   &[data-placement^="right"] > .tippy-arrow::before {
-    border-right-color: white;
+    border-right-color: var(--lookbook-dropdown-bg);
   }
 }
