--- a/app/components/lookbook/embed/component.html.erb
+++ b/app/components/lookbook/embed/component.html.erb
@@ -1,14 +1,6 @@
-<%= render_component_tag id: id,
-  class: "w-full" do %>
-  <div>
-    <iframe
-      id="<%= id %>-frame"
-      src="<%= embed_path %>"
-      frameborder="0"
-      x-ref="inspector"
-      class="w-full transition-[height] duration-150"
-      @dom:update-complete.window="resizeIframe"
-      :style="`height: ${cssHeight}`"
-      @load="loadResizer"></iframe> 
-  </div>
-<% end %>
+<lookbook-embed
+  app="<%= helpers.lookbook_home_url %>"
+  preview="<%= preview_class %>"
+  scenario="<%= scenario.name %>"
+  <%= params_attrs_str %> panels="<%= panels.join(",") %>"
+  actions="<%= actions.join(",") %>"></lookbook-embed>
