--- a/app/views/lookbook/pages/show.html.erb
+++ b/app/views/lookbook/pages/show.html.erb
@@ -1,7 +1,7 @@
 <main
   class="h-[calc(100vh_-_40px)]"
   x-data="{}"
-  @navigation:complete.window="$refs.scroller.scrollTop = 0">
+  @navigation:complete.window="$refs.scroller.scrollTop = 0; Lookbook.initEmbeds();">
   <div class="h-full bg-lookbook-page-bg relative">
     <% unless @error %>
       
@@ -10,14 +10,14 @@
         <div class="relative z-10 flex items-center">
         
         <% if @previous_page %>
-          <%= lookbook_render :button,
+          <%= lookbook_render :icon_button,
             size: :lg,
             icon: :chevron_left,
             tooltip: "Previous page",
             href: lookbook_page_path(@previous_page.lookup_path),
             class: "pr-0.5 bg-transparent" %>
         <% else %>
-          <%= lookbook_render :button,
+          <%= lookbook_render :icon_button,
             size: :lg,
             icon: :chevron_left,
             disabled: true,
@@ -25,14 +25,14 @@
         <% end %>
 
         <% if @next_page %>
-          <%= lookbook_render :button,
+          <%= lookbook_render :icon_button,
             size: :lg,
             icon: :chevron_right,
             tooltip: "Next page",
             href: lookbook_page_path(@next_page.lookup_path),
             class: "pl-0.5 bg-transparent" %>
         <% else %>
-          <%= lookbook_render :button,
+          <%= lookbook_render :icon_button,
             size: :lg,
             icon: :chevron_right,
             disabled: true,
