--- a/public/lookbook-assets/css/lookbook.css
+++ b/public/lookbook-assets/css/lookbook.css
@@ -1407,6 +1407,17 @@ pre[class*="language-"] {
   font-size: .82rem;
 }
 
+[data-component="embed-code-dropdown"] [data-component="code"] {
+  padding: 0;
+}
+
+[data-component="embed-code-dropdown"] pre.code.highlight {
+  white-space: normal;
+  padding: 0;
+  font-size: 11px;
+  overflow: hidden;
+}
+
 [data-component="icon"] {
   flex: none;
   line-height: 1;
@@ -1770,10 +1781,6 @@ select.compact {
   top: 39px;
 }
 
-.-top-px {
-  top: -1px;
-}
-
 .top-1\/2 {
   top: 50%;
 }
@@ -1784,6 +1791,10 @@ select.compact {
 
 .right-\[18px\] {
   right: 18px;
+}
+
+.-top-px {
+  top: -1px;
 }
 
 .-left-px {
@@ -1884,8 +1895,8 @@ select.compact {
   margin-right: 1.5rem;
 }
 
-.mr-auto {
-  margin-right: auto;
+.mb-3 {
+  margin-bottom: .75rem;
 }
 
 .mt-\[-2px\] {
@@ -1902,6 +1913,10 @@ select.compact {
 
 .-ml-3 {
   margin-left: -.75rem;
+}
+
+.mr-auto {
+  margin-right: auto;
 }
 
 .\!ml-2 {
@@ -2040,8 +2055,8 @@ select.compact {
   width: 1.25rem;
 }
 
-.w-\[220px\] {
-  width: 220px;
+.w-\[320px\] {
+  width: 320px;
 }
 
 .w-3\.5 {
@@ -2395,6 +2410,10 @@ select.compact {
   border-color: #0000;
 }
 
+.border-lookbook-dropdown-divider {
+  border-color: var(--lookbook-dropdown-divider);
+}
+
 .\!border-lookbook-header-border {
   border-color: var(--lookbook-header-border) !important;
 }
@@ -2456,16 +2475,20 @@ select.compact {
   background-color: rgb(250 250 250 / var(--tw-bg-opacity));
 }
 
-.bg-lookbook-button-bg {
-  background-color: var(--lookbook-button-bg);
-}
-
 .\!bg-lookbook-header-bg {
   background-color: var(--lookbook-header-bg) !important;
 }
 
 .bg-lookbook-divider {
   background-color: var(--lookbook-divider);
+}
+
+.bg-lookbook-button-bg {
+  background-color: var(--lookbook-button-bg);
+}
+
+.bg-lookbook-button-bg-hover {
+  background-color: var(--lookbook-button-bg-hover);
 }
 
 .bg-lookbook-toolbar-bg {
@@ -2488,16 +2511,16 @@ select.compact {
   padding: 1rem;
 }
 
+.p-3 {
+  padding: .75rem;
+}
+
 .p-1 {
   padding: .25rem;
 }
 
 .p-2 {
   padding: .5rem;
-}
-
-.p-3 {
-  padding: .75rem;
 }
 
 .px-4 {
@@ -2598,8 +2621,12 @@ select.compact {
   padding-top: .5rem;
 }
 
-.pt-2\.5 {
-  padding-top: .625rem;
+.pt-3 {
+  padding-top: .75rem;
+}
+
+.pb-3 {
+  padding-bottom: .75rem;
 }
 
 .pb-0 {
@@ -2616,6 +2643,10 @@ select.compact {
 
 .pt-1\.5 {
   padding-top: .375rem;
+}
+
+.pt-2\.5 {
+  padding-top: .625rem;
 }
 
 .pb-1\.5 {
@@ -2723,14 +2754,6 @@ select.compact {
   color: var(--lookbook-blank-slate-title);
 }
 
-.text-lookbook-icon-button-stroke {
-  color: var(--lookbook-icon-button-stroke);
-}
-
-.text-lookbook-icon-button-stroke-hover {
-  color: var(--lookbook-icon-button-stroke-hover);
-}
-
 .text-green-500 {
   --tw-text-opacity: 1;
   color: rgb(34 197 94 / var(--tw-text-opacity));
@@ -2741,8 +2764,13 @@ select.compact {
   color: rgb(22 163 74 / var(--tw-text-opacity));
 }
 
-.text-lookbook-button-text {
-  color: var(--lookbook-button-text);
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.text-lookbook-icon-button-stroke {
+  color: var(--lookbook-icon-button-stroke);
 }
 
 .\!text-lookbook-header-text {
@@ -2757,8 +2785,16 @@ select.compact {
   color: var(--lookbook-header-text);
 }
 
+.text-lookbook-icon-button-stroke-hover {
+  color: var(--lookbook-icon-button-stroke-hover);
+}
+
 .text-lookbook-prose-text {
   color: var(--lookbook-prose-text);
+}
+
+.text-lookbook-button-text {
+  color: var(--lookbook-button-text);
 }
 
 .text-lookbook-embed-title {
@@ -2868,14 +2904,14 @@ select.compact {
   transition-timing-function: cubic-bezier(.4, 0, .2, 1);
 }
 
-.transition-\[height\] {
-  transition-property: height;
+.transition-all {
+  transition-property: all;
   transition-duration: .15s;
   transition-timing-function: cubic-bezier(.4, 0, .2, 1);
 }
 
-.transition-all {
-  transition-property: all;
+.transition-\[height\] {
+  transition-property: height;
   transition-duration: .15s;
   transition-timing-function: cubic-bezier(.4, 0, .2, 1);
 }
@@ -3496,12 +3532,12 @@ select.compact {
   background-color: #0000;
 }
 
-.hover\:bg-lookbook-button-bg-hover:hover {
-  background-color: var(--lookbook-button-bg-hover);
-}
-
 .hover\:bg-lookbook-draggable-hint:hover {
   background-color: var(--lookbook-draggable-hint);
+}
+
+.hover\:bg-lookbook-button-bg-hover:hover {
+  background-color: var(--lookbook-button-bg-hover);
 }
 
 .hover\:text-gray-900:hover {
