--- a/docs/src/_partials/_header.erb
+++ b/docs/src/_partials/_header.erb
@@ -4,7 +4,7 @@
       <a href="/" class="flex-none">
         <%= image "lookbook_logo.svg", class: "w-[130px]" %>
       </a>
-      <span class="text-xs ml-3 relative top-[3.5px] opacity-40">
+      <span class="text-xs ml-3 relative top-[3.5px] opacity-40 whitespace-nowrap">
         v<%= lookbook_version %>
       </span>
     </div>
