--- a/docs/frontend/styles/index.css
+++ b/docs/frontend/styles/index.css
@@ -39,6 +39,10 @@
       @apply mb-2;
     }
   }
+
+  .link-underline {
+    @apply underline !underline-offset-4 !decoration-current decoration-dashed hover:decoration-solid transition-all;
+  }
 }
 
 @layer components {
@@ -144,7 +148,7 @@
   }
 
   .prose a {
-    @apply underline !underline-offset-2 !decoration-gray-300 hover:!decoration-indigo-400 transition-all;
+    @apply link-underline;
   }
 
   /* Homepage */
