--- a/docs/src/_components/lookbook_docs/button_block/component.html.erb
+++ b/docs/src/_components/lookbook_docs/button_block/component.html.erb
@@ -1,3 +1,3 @@
-<%= tag.div **html_attrs, class: {"flex justify-center w-full": center, "py-2": true} do %>
+<%= tag.div **html_attrs, class: {"flex justify-center w-full": center} do %>
   <%= button %>
 <% end %>
